# air-quality-comparison

./: .dvcignore  .gitignore  README.md  dvc.yaml  mlflow.db  pyproject.toml
conf/: __init__.py  forecast.yaml
configs/pipeline/: params.yaml  stations_geo.json
notebooks/: experiment_cross_station_validated_fixed.ipynb
reports/: .gitignore
reports/metrics/: .gitignore
src/air_quality_imputer/models/: __init__.py  diffusion_imputer.py  forecast_model_mixin.py  recurrent_forecasters.py  saits_imputer.py  training_utils.py  transformer_forecaster.py  transformer_imputer.py
src/air_quality_imputer/pipeline/: run_forecast_experiments.py
src/air_quality_imputer/tracking/: mlflow_utils.py
src/air_quality_imputer/training/: forecast_runner.py
src/air_quality_imputer/training/conf/: train.yaml
src/air_quality_imputer/training/conf/model/: classic_transformer.yaml  diffusion_transformer.yaml
