[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "air-quality-imputer"
version = "0.1.0"
description = "Air quality multi-model forecasting experiments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "scikit-learn",
  "omegaconf>=2.3",
  "torch",
  "mlflow>=2.0",
  "dagshub",
  "dvc[s3]",
]

[project.scripts]
aqi-run-experiments = "air_quality_imputer.training.forecast_runner:main"
aqi-train = "air_quality_imputer.training.forecast_runner:main"
aqi-eval = "air_quality_imputer.training.forecast_runner:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["air_quality_imputer*"]
